fixed overflow

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -14,6 +14,8 @@
     
 
     
+
+    
     .section2Text p{
         font-size: smaller;
     }
@@ -24,7 +26,8 @@
 
     .section2Image img{
         
-        width: 350px;
+        width: 300px;
+        margin-bottom: 3rem;
        
     }
 
@@ -36,11 +39,6 @@
 
     .section5Container{
         flex-wrap: wrap;
-    }
-
-    .section5Image img{
-        width: 420px;
-        
     }
 
     .section5Text h3{
@@ -156,6 +154,28 @@
         overflow-x: hidden;
     }
       
+    .section2Container {
+        min-height: 80vh; 
+    }
+
+    .section5Image img{
+       max-width: 100px;
+       padding-left: 2.3rem;
+    }
+    
+    
+
+    .section7Text{
+        
+        padding-right: 2rem;
+       
+    }
+
+    .section7Image img{
+        padding-left: 4rem;
+    }
+    
+
 
 }
 
@@ -202,30 +222,22 @@
 
 @media (max-width: 480px) {
     /* Even smaller screens (phones in portrait) */
-    
-
-
-    
-    
-
-    .section2Image img{
-        width:100%;
+    body {
+        overflow-x: hidden;
     }
-
+      
     
 
     .section2Text{
         width: 60%;
-        margin-left: 4rem;
-        margin-top: 2rem;
     }
 
     .section2Text h3{
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
 
     .section2Text p{
-        font-size: .825rem;
+        font-size: .1.2rem;
     }
 
 
@@ -242,17 +254,16 @@
     
 
     .section5Container{
-        padding-bottom: 100%;
         height: 80vh;
     }
 
     .section5Image img{
-        width: 100%;
+        max-width: 80%;
     }
 
     .section5Text h3{
     
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
     
     .section5Text p{
@@ -269,21 +280,9 @@
     .section7Image img{
         
         width: 350px;
-        padding-left: 4rem;
         
     }
-
-    .section7Text{
-        margin-right: 2rem;
-        
-    }
-
-    .section7Container{
-        height: 100%;
-        
-        
-    }
-
+ 
   
 
 .section6Box {
