--- a/styles.css
+++ b/styles.css
@@ -136,13 +136,12 @@ html{
 
 .section2Container {
     background-color: #e4d6d6;
-    min-height: 100vh; 
+    min-height: 90vh; 
     width: 100%; 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding-bottom: 5rem;
-    padding-top: .4rem;
     flex-wrap: wrap;
     text-align: center;
 }
@@ -150,7 +149,6 @@ html{
 .section2Image img{
     margin-top: 5rem;
     width: 400px;
-    margin-right: 4rem;
     border-radius: 1rem;
 }
 
@@ -337,18 +335,16 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 8rem;
     padding-top: 5rem;
-    
-
     
 }
 
 .section5Image img{
     margin-top: 5rem;
-    width: 520px;
+    max-width: 480px;
     margin-right: 4rem;
     padding-bottom: 4rem;
+    border-radius: 1rem;
 }
 
 
@@ -357,11 +353,11 @@ html{
     position: absolute;
     text-align: center;
     font-family: "Dancing Script", serif;
-    font-size: 3rem;
+    font-size: 2rem;
     color: #a24e4e;
     margin-right: 2rem;
     margin-bottom: 3rem;
-    transform: translate(6.7rem,-17.3rem);
+    transform: translate(5.7rem,-16.3rem);
    
 }
 
@@ -456,14 +452,15 @@ html{
     
     .section7Image img{
         margin-top: 5rem;
-        width: 400px;
+        max-width: 400px;
+        width: 100%;
         margin-right: 4rem;
     }
     
     
     
     .section7Text{
-        width: 400px;
+        width: 500px;
         margin-left: 4rem;
         flex-wrap: wrap;
     }
